--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p>I am currently studying at NTPU in the business school</p>
         <p>Here is a brief introduction about me:</p>
         <div>
-            <img src="image/1.jpg" alt="Introduction Image" class="intro-image">
+            <img src="1.jpg" alt="Introduction Image" class="intro-image">
         </div>
         <p>My hobbies and interests: Listen to music and play basketball</p>
         <p class="bold">About my school:</p>
